Experimenting with the PHP parser with callbacks

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>App</title>
+    <title>Node Development Server</title>
 
     <style type="text/css">
         body,
@@ -32,9 +32,9 @@
 <body>
 
     <main id="main" role="main">
-        <h1>Welcome to my app</h1>
+        <h1>Welcome to the PageStudio development server</h1>
 
-        <iframe id="viewport" src=""></iframe>
+        <iframe id="viewport" src="" frameborder="0" allowfullscreen=""></iframe>
     </main> 
 
     <script src="./main.js"></script>
